--- a/System/TecSys/src/HomePage/AdminHomePage.form
+++ b/System/TecSys/src/HomePage/AdminHomePage.form
@@ -1094,7 +1094,7 @@
                                             <properties/>
                                             <border type="none"/>
                                             <children>
-                                              <grid id="20dd1" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                              <grid id="20dd1" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                                 <margin top="0" left="0" bottom="0" right="0"/>
                                                 <constraints>
                                                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -1312,52 +1312,6 @@
                                                       </grid>
                                                     </children>
                                                   </grid>
-                                                  <grid id="7dd12" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                                                    <margin top="0" left="0" bottom="0" right="0"/>
-                                                    <constraints>
-                                                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                                                    </constraints>
-                                                    <properties/>
-                                                    <border type="none"/>
-                                                    <children>
-                                                      <grid id="a6077" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                                                        <margin top="0" left="0" bottom="0" right="0"/>
-                                                        <constraints>
-                                                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                                                        </constraints>
-                                                        <properties/>
-                                                        <border type="none"/>
-                                                        <children>
-                                                          <component id="105ee" class="javax.swing.JButton" binding="UserAdminProfImgBtn">
-                                                            <constraints>
-                                                              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
-                                                            </constraints>
-                                                            <properties>
-                                                              <text value="Add Profile Image"/>
-                                                            </properties>
-                                                          </component>
-                                                          <grid id="809ca" binding="AdminProfImgSelectedPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                                                            <margin top="0" left="0" bottom="0" right="0"/>
-                                                            <constraints>
-                                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                                                            </constraints>
-                                                            <properties/>
-                                                            <border type="none"/>
-                                                            <children>
-                                                              <component id="d15a" class="javax.swing.JLabel" binding="AdminProfImgSelectedLabel">
-                                                                <constraints>
-                                                                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                                                                </constraints>
-                                                                <properties>
-                                                                  <text value="Label"/>
-                                                                </properties>
-                                                              </component>
-                                                            </children>
-                                                          </grid>
-                                                        </children>
-                                                      </grid>
-                                                    </children>
-                                                  </grid>
                                                 </children>
                                               </grid>
                                               <grid id="a602" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -1394,7 +1348,7 @@
                                                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                                     </constraints>
                                                     <properties>
-                                                      <text value="Label"/>
+                                                      <text value=""/>
                                                     </properties>
                                                   </component>
                                                 </children>
@@ -1419,7 +1373,7 @@
                                             <properties/>
                                             <border type="none"/>
                                             <children>
-                                              <grid id="8035" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                              <grid id="8035" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                                 <margin top="0" left="0" bottom="0" right="0"/>
                                                 <constraints>
                                                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -1719,52 +1673,6 @@
                                                       </grid>
                                                     </children>
                                                   </grid>
-                                                  <grid id="9b386" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                                                    <margin top="0" left="0" bottom="0" right="0"/>
-                                                    <constraints>
-                                                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                                                    </constraints>
-                                                    <properties/>
-                                                    <border type="none"/>
-                                                    <children>
-                                                      <grid id="b1e8e" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                                                        <margin top="0" left="0" bottom="0" right="0"/>
-                                                        <constraints>
-                                                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                                                        </constraints>
-                                                        <properties/>
-                                                        <border type="none"/>
-                                                        <children>
-                                                          <component id="3bdd9" class="javax.swing.JButton" binding="UserUndergraduateProfImgBtn">
-                                                            <constraints>
-                                                              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
-                                                            </constraints>
-                                                            <properties>
-                                                              <text value="Add Profile Image"/>
-                                                            </properties>
-                                                          </component>
-                                                          <grid id="d0844" binding="UndergraduateProfImgSelectedPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                                                            <margin top="0" left="0" bottom="0" right="0"/>
-                                                            <constraints>
-                                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                                                            </constraints>
-                                                            <properties/>
-                                                            <border type="none"/>
-                                                            <children>
-                                                              <component id="8d498" class="javax.swing.JLabel" binding="UndergraduateProfImgSelectedLabel">
-                                                                <constraints>
-                                                                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-                                                                </constraints>
-                                                                <properties>
-                                                                  <text value="Label"/>
-                                                                </properties>
-                                                              </component>
-                                                            </children>
-                                                          </grid>
-                                                        </children>
-                                                      </grid>
-                                                    </children>
-                                                  </grid>
                                                 </children>
                                               </grid>
                                               <grid id="18ed4" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -1783,11 +1691,6 @@
                                                       <text value="Add User"/>
                                                     </properties>
                                                   </component>
-                                                  <hspacer id="d0f20">
-                                                    <constraints>
-                                                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                                                    </constraints>
-                                                  </hspacer>
                                                   <component id="b5b04" class="javax.swing.JLabel">
                                                     <constraints>
                                                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -1801,9 +1704,14 @@
                                                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                                     </constraints>
                                                     <properties>
-                                                      <text value="Label"/>
+                                                      <text value=""/>
                                                     </properties>
                                                   </component>
+                                                  <hspacer id="d0f20">
+                                                    <constraints>
+                                                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                                                    </constraints>
+                                                  </hspacer>
                                                 </children>
                                               </grid>
                                             </children>
